# pyhabitat

./: .gitignore  Dockerfile  Dockerfile.multi-dev  README.md  README_.md  README_21october2025.md  __init__.py  __main__.py  build.ps1  build.sh  build_docker.sh  build_executable.py  build_pyz.ps1  build_pyz.py  build_pyz.sh  cli.py  environment.py  pyhabitat-1.0.1-py3-none-any.whl  pyproject.toml  utils.py  version.rc.template  version_info.txt
.github/workflows/: build.yml  ci.yml  docker.yml  publish.yaml  publish.yml
.ipynb_checkpoints/: README-checkpoint.md
docs/: CHANGELOG.md
pyhabitat/: __init__.py  __main__.py  cli.py  environment.py  report.py  system_info.py  utils.py  version_info.py
pyhabitat-build/: __main__.py  pyproject.toml
pyhabitat-build/pyhabitat/: __init__.py  cli.py  environment.py
pyhabitat-lite/: cli.py  pyproject.toml
pyhabitat/.ipynb_checkpoints/: __init__-checkpoint.py  cli-checkpoint.py  environment-checkpoint.py
scripts/: function_signature_inspection.py
src/pyhabitat/: VERSION  __init__.py  __init__defunct.py  __main__.py  _compat.py  _version.py  browser_file_navigation.py  cli.py  cli_rising.py  console.py  environment.py  file_character.py  gui_elements.py  launch.py  logging_setup.py  packaging.py  pid_server_runtime.py  reporting.py  servedirs.py  server_runtime.py  system_info.py  version_info.py  web.py
tests/: test_matplotlib.py
